style updates, form component, get star wars api data on home page, etc etc etc

--- a/public/master.css
+++ b/public/master.css
@@ -1,8 +1,10 @@
 :root {
     --body-color: #cecece;
     --body-bg-color: #222;
+    --component-spacing: .75rem;
 }
 
 html, body {
     height: 100%;
+    overflow: auto;
 }
